[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Fonts/pixel_sleigh.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Images/Background/MenuPausa.PNG" type="Texture" id=2]
[ext_resource path="res://Scenes/MenuPausa.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 25
extra_spacing_bottom = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 25
extra_spacing_bottom = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 25
extra_spacing_bottom = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
outline_size = 1
outline_color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )
extra_spacing_top = 25
extra_spacing_bottom = 15
font_data = ExtResource( 1 )

[node name="Pause" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.584314, 0.568627, 0.568627, 1 )
position = Vector2( 511.25, 301.75 )
scale = Vector2( 1.00735, 1.01771 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -169.5
margin_top = -93.0
margin_right = 169.5
margin_bottom = 93.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 384.0
margin_bottom = 52.0
custom_colors/font_color_hover = Color( 0.815686, 0.564706, 0.564706, 1 )
custom_fonts/font = SubResource( 1 )
text = "Reanudar el Juego"
flat = true

[node name="Button4" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 384.0
margin_bottom = 108.0
custom_colors/font_color_hover = Color( 0.815686, 0.564706, 0.564706, 1 )
custom_fonts/font = SubResource( 4 )
text = "Cargar ultimo punto"
flat = true

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 384.0
margin_bottom = 164.0
custom_colors/font_color_hover = Color( 0.815686, 0.564706, 0.564706, 1 )
custom_fonts/font = SubResource( 2 )
text = "Guardar Juego"
flat = true

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 168.0
margin_right = 384.0
margin_bottom = 220.0
custom_colors/font_color_hover = Color( 0.815686, 0.564706, 0.564706, 1 )
custom_fonts/font = SubResource( 3 )
text = "Salir del Juego"
flat = true

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
